<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/main_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="70dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="30dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="10pt"
            android:textAlignment="center"
            android:layout_gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <xyz.walk8243.gesturenavigationsample.component.NavigationChoicesGroup
            android:id="@+id/radioButtonGroup_navigation"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <xyz.walk8243.gesturenavigationsample.component.NavigationChoices
                android:id="@+id/radioButton_navigation_displayMode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/navigation_display_mode" />

            <xyz.walk8243.gesturenavigationsample.component.NavigationChoices
                android:id="@+id/radioButton_navigation_fullscreenMode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/navigation_fullscreen_mode" />

            <xyz.walk8243.gesturenavigationsample.component.NavigationChoices
                android:id="@+id/radioButton_navigation_appreciationMode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/navigation_appreciation_mode" />

            <xyz.walk8243.gesturenavigationsample.component.NavigationChoices
                android:id="@+id/radioButton_navigation_immersionMode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/navigation_immersion_mode" />

            <xyz.walk8243.gesturenavigationsample.component.NavigationChoices
                android:id="@+id/radioButton_navigation_applicationPriorityMode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/navigation_application_priority_mode" />

        </xyz.walk8243.gesturenavigationsample.component.NavigationChoicesGroup>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>